スレッドの削除API - 雛形作成
