# api/webapi/app/controllers.go
@@ -890,6 +890,7 @@ func unmarshalCreateRoomRoomsPayload(ctx context.Context, service *goa.Service, 
 type ThreadsController interface {
 	goa.Muxer
 	Create(*CreateThreadsContext) error
+	Delete(*DeleteThreadsContext) error
 }
 
 // MountThreadsController "mounts" a Threads resource controller on the given service.
@@ -897,6 +898,7 @@ func MountThreadsController(service *goa.Service, ctrl ThreadsController) {
 	initService(service)
 	var h goa.Handler
 	service.Mux.Handle("OPTIONS", "/api/v1/threads", ctrl.MuxHandler("preflight", handleThreadsOrigin(cors.HandlePreflight()), nil))
+	service.Mux.Handle("OPTIONS", "/api/v1/threads/:id", ctrl.MuxHandler("preflight", handleThreadsOrigin(cors.HandlePreflight()), nil))
 
 	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
 		// Check if there was an error loading the request
@@ -920,6 +922,23 @@ func MountThreadsController(service *goa.Service, ctrl ThreadsController) {
 	h = handleThreadsOrigin(h)
 	service.Mux.Handle("POST", "/api/v1/threads", ctrl.MuxHandler("create", h, unmarshalCreateThreadsPayload))
 	service.LogInfo("mount", "ctrl", "Threads", "action", "Create", "route", "POST /api/v1/threads", "security", "jwt")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		// Check if there was an error loading the request
+		if err := goa.ContextError(ctx); err != nil {
+			return err
+		}
+		// Build the context
+		rctx, err := NewDeleteThreadsContext(ctx, req, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.Delete(rctx)
+	}
+	h = handleSecurity("jwt", h, "api:access")
+	h = handleThreadsOrigin(h)
+	service.Mux.Handle("DELETE", "/api/v1/threads/:id", ctrl.MuxHandler("delete", h, nil))
+	service.LogInfo("mount", "ctrl", "Threads", "action", "Delete", "route", "DELETE /api/v1/threads/:id", "security", "jwt")
 }
 
 // handleThreadsOrigin applies the CORS response headers corresponding to the origin.
